--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Inventory & Order Management</title>
-    <meta name="description" content="Professional inventory and order management system with QR code tracking for clothing products">
+    <title>FABRIX - Inventory & Order Management</title>
+    <meta name="description" content="FABRIX - Professional inventory and order management system with QR code tracking for clothing products">
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
